feat: Add Dockerfile and .dockerignore
Introduces a Dockerfile for containerizing the SquadSync application and a corresponding .dockerignore file to optimize build contexts. This enables consistent deployment and simplifies the local development environment by excluding unnecessary files from the Docker image.

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,6 +6,7 @@ __pycache__/
 *.pyo
 *.pyd
 .Python
+.git
 env/
 pip-log.txt
 pip-delete-this-directory.txt
@@ -13,3 +14,4 @@ pip-delete-this-directory.txt
 .vscode/
 serviceAccountKey.json
 *.md
+venv/
